Fix image alignment entourage

--- a/assets/style.css
+++ b/assets/style.css
@@ -180,11 +180,13 @@ footer {
 	.carousel {
 		height: 270px !important;
 	}
+}
 
-	.entourage {
-		width: 30vw;
-		height: 30vw;
-		border-radius: 50%;
-		margin: 2vh auto;
-	}
+@media only screen and (max-width: 767px) {
+  .entourage {
+    width: 30vw;
+    height: 30vw;
+    border-radius: 50%;
+    margin: 2vh auto;
+  }
 }
